# stocky-ml

./: .gitignore  Dockerfile  README.md  pyproject.toml  stocky.ipynb  stockytrades.ipynb
app/: Dockerfile  app.py  requirements.txt
data/: omx.json  realReq.json  request.json  stock.json  trades.json
model/: model.h5  scaler.pkl
model/model/: keras_metadata.pb  saved_model.pb
model/model/variables/: variables.data-00000-of-00001  variables.index
model/scaler/: scaler.pkl
tensorflow-tutorials/: regression.ipynb
