[tool.poetry]
name = "stocky-ml"
version = "0.1.0"
description = ""
authors = ["Robin <robin.bauhn@minso.se>"]
readme = "README.md"
packages = [{include = "stocky_ml"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
flask = "^2.3.2"
python-dateutil = "^2.8.2"
pandas = "^2.0.2"
tensorflow = "2.12.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
